tests/dataset/tpc-ds/compiler/c/q99.error
/tmp/q99.c: In function ‘test_TPCDS_Q99_buckets’:
/tmp/q99.c:271:49: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  271 |   if (test_TPCDS_Q99_buckets_grouped.len != tmp1.len) {
      |                                                 ^
      |                                                 ->
/tmp/q99.c:275:58: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  275 |       if (test_TPCDS_Q99_buckets_grouped.data[i3] != tmp1.data[i3]) {
      |                                                          ^
      |                                                          ->
/tmp/q99.c: In function ‘main’:
/tmp/q99.c:364:36: error: incompatible types when assigning to type ‘list_int’ from type ‘grouped_item_list_t’
  364 |   test_TPCDS_Q99_buckets_grouped = grouped;
      |                                    ^~~~~~~
