tests/dataset/tpc-ds/compiler/c/q99.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct CatalogSale CatalogSale;
typedef struct Warehouse Warehouse;
typedef struct ShipMode ShipMode;
typedef struct CallCenter CallCenter;

typedef struct {
  const char *warehouse;
  const char *sm_type;
  const char *cc_name;
  int d30;
  int d60;
  int d90;
  int d120;
  int dmore;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_ship_date_sk;
  int cs_sold_date_sk;
  int cs_warehouse_sk;
  int cs_ship_mode_sk;
  int cs_call_center_sk;
} catalog_sale_t;

typedef struct {
  int w_warehouse_sk;
  const char *w_warehouse_name;
} warehouse_t;

typedef struct {
  int sm_ship_mode_sk;
  const char *sm_type;
} ship_mode_t;

typedef struct {
  int cc_call_center_sk;
  const char *cc_name;
} call_center_t;

typedef struct {
  int warehouse;
  int sm_type;
  int cc_name;
  int d30;
  int d60;
  int d90;
  int d120;
  int dmore;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_ship_date_sk;
  int cs_sold_date_sk;
  int cs_warehouse_sk;
  int cs_ship_mode_sk;
  int cs_call_center_sk;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Warehouse {
  int w_warehouse_sk;
  char *w_warehouse_name;
} Warehouse;
typedef struct {
  int len;
  warehouse_t *data;
} warehouse_list_t;
warehouse_list_t create_warehouse_list(int len) {
  warehouse_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(warehouse_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct ShipMode {
  int sm_ship_mode_sk;
  char *sm_type;
} ShipMode;
typedef struct {
  int len;
  ship_mode_t *data;
} ship_mode_list_t;
ship_mode_list_t create_ship_mode_list(int len) {
  ship_mode_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ship_mode_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CallCenter {
  int cc_call_center_sk;
  char *cc_name;
} CallCenter;
typedef struct {
  int len;
  call_center_t *data;
} call_center_list_t;
call_center_list_t create_call_center_list(int len) {
  call_center_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(call_center_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q99_buckets_grouped;
static void test_TPCDS_Q99_buckets() {
  tmp1_t tmp1[] = {(tmp1_t){.warehouse = "Warehouse1",
                            .sm_type = "EXP",
                            .cc_name = "CC1",
                            .d30 = 1,
                            .d60 = 1,
                            .d90 = 1,
                            .d120 = 1,
                            .dmore = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q99_buckets_grouped.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q99_buckets_grouped.len; i3++) {
      if (test_TPCDS_Q99_buckets_grouped.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_ship_date_sk = 31,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ship_mode_sk = 1,
                                                     .cs_call_center_sk = 1},
                                    (catalog_sale_t){.cs_ship_date_sk = 51,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ship_mode_sk = 1,
                                                     .cs_call_center_sk = 1},
                                    (catalog_sale_t){.cs_ship_date_sk = 71,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ship_mode_sk = 1,
                                                     .cs_call_center_sk = 1},
                                    (catalog_sale_t){.cs_ship_date_sk = 101,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ship_mode_sk = 1,
                                                     .cs_call_center_sk = 1},
                                    (catalog_sale_t){.cs_ship_date_sk = 131,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_warehouse_sk = 1,
                                                     .cs_ship_mode_sk = 1,
                                                     .cs_call_center_sk = 1}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  warehouse_t warehouse[] = {
      (warehouse_t){.w_warehouse_sk = 1, .w_warehouse_name = "Warehouse1"}};
  int warehouse_len = sizeof(warehouse) / sizeof(warehouse[0]);
  ship_mode_t ship_mode[] = {
      (ship_mode_t){.sm_ship_mode_sk = 1, .sm_type = "EXP"}};
  int ship_mode_len = sizeof(ship_mode) / sizeof(ship_mode[0]);
  call_center_t call_center[] = {
      (call_center_t){.cc_call_center_sk = 1, .cc_name = "CC1"}};
  int call_center_len = sizeof(call_center) / sizeof(call_center[0]);
  grouped_item_list_t grouped = (grouped_item_list_t){0, NULL};
  printf("[");
  for (int i4 = 0; i4 < grouped.len; i4++) {
    if (i4 > 0)
      printf(",");
    grouped_item_t it = grouped.data[i4];
    printf("{");
    _json_string("warehouse");
    printf(":");
    _json_int(it.warehouse);
    printf(",");
    _json_string("sm_type");
    printf(":");
    _json_int(it.sm_type);
    printf(",");
    _json_string("cc_name");
    printf(":");
    _json_int(it.cc_name);
    printf(",");
    _json_string("d30");
    printf(":");
    _json_int(it.d30);
    printf(",");
    _json_string("d60");
    printf(":");
    _json_int(it.d60);
    printf(",");
    _json_string("d90");
    printf(":");
    _json_int(it.d90);
    printf(",");
    _json_string("d120");
    printf(":");
    _json_int(it.d120);
    printf(",");
    _json_string("dmore");
    printf(":");
    _json_int(it.dmore);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q99_buckets_grouped = grouped;
  test_TPCDS_Q99_buckets();
  return 0;
}
